--- a/mmportalMVC/Views/Home/Login.cshtml
+++ b/mmportalMVC/Views/Home/Login.cshtml
@@ -41,6 +41,9 @@
                         <div class="form-group">
                             <input type="submit" name="submit" class="btn btn-primary" value="Login" />
                         </div>
+                        <div class="form-group">
+                            <input type="button" class="btn btn-default" value="Register" onclick="window.location='Register'"/>
+                        </div>
                     }
                 </div>
             </div>
